--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,14 +20,5 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-sitemap-html": "^1.0.3"
-  },
-  "now": {
-    "env": {
-      "NODE_ENV": "production"
-    },
-    "aliases": [
-      "www.stacyharrismft.com",
-      "stacyharrismft.com"
-    ]
   }
 }
