--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "homepage": "https://github.com/tdharris/site-stacyharrismft#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "express-sitemap-html": "^1.0.3"
+    "sitemap": "^1.13.0"
   }
 }
